# miniprobe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.zed/: settings.json
miniprobe-client/: Cargo.toml
miniprobe-client/src/: auth.rs  egress.rs  http_util.rs  main.rs  query.rs  session.rs
miniprobe-proto/: Cargo.toml
miniprobe-proto/src/: lib.rs  msg.rs
miniprobe-server/: Cargo.toml
miniprobe-server/.sqlx/: query-12654e5c9361f4e43efd4d2a6ae947523c6fe38d9657c0d058b141f62d598637.json  query-1c34b6ec22a6662136ee9c68150bdb66d21f492956a9d3d5412232f0b7bb1e17.json  query-3646855b369892fb2326265d57c3152b4fd9fcb90bf61c9e8be8551651652b46.json  query-3b94d35c12329ac88fbbe9ba6987cb941498c3518445be5046512dffb6bd1478.json  query-3fcc279c0d5490e51fdd16ca82801ab5fd4220289f691203f0f06e5771372983.json  query-4d89ca0f780376251f7d4cf952006d41b062eb2360fa5c5d9016ed3e90baac24.json  query-9b4fd2d3445d71ae0a066bb819e45b74be5740a631bcc198a64f9e22e9aa6ace.json  query-ab7df7a3f79d5d4e9108590d0758d97be3daf7a22541bbc5a405bc982d65ed81.json  query-afecc46d80d749c5c171055b2d61b202e668d9366632982d0578144ff6669617.json  query-cbcf567cc737361c53192839fcd81518e4ca0f1b7772ef4a431a40274661d9f0.json
miniprobe-server/migrations/: 20250828173247_create-clients-table.sql  20250830155313_create-sessions-table.sql  20250901085725_create-session-data-table.sql
miniprobe-server/src/: admin.rs  lock.rs  main.rs  postcard.rs  session.rs
miniprobe-server/src/route/: auth.rs  mod.rs  sessions.rs
miniprobe-server/src/route/metrics/: ingress.rs  mod.rs
