[workspace]
members = ["miniprobe-client", "miniprobe-proto", "miniprobe-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
postcard = "1.1"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = "1"
tokio-util = "0.7"

miniprobe-proto = { path = "miniprobe-proto/" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "s"   # Optimize for size.
lto = true
codegen-units = 1
