[package]
name = "miniprobe-client"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
http = "1"
httparse = "1.10"
log = "0.4"
netdev = "0.36"
simple_logger = { version = "5", default-features = false, features = [
    "timestamps",
] }
sysinfo = "0.36"
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }

anyhow = { workspace = true }
bytes = { workspace = true }
miniprobe-proto = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "macros"] }
