[package]
name = "miniprobe-client"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
http = "1"
httparse = "1.10"
itertools = "0.14"
log = "0.4"
netdev = "0.36"
simple_logger = { version = "5", default-features = false, features = [
    "timestamps",
] }
sysinfo = "0.36"
tokio-native-tls = "0.3.1"
tokio-tungstenite = "0.27"

anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
miniprobe-proto = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "net",
    "time",
    "io-util",
    "macros",
    "signal",
] }
tokio-util = { workspace = true }
