[package]
name = "miniprobe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
confique = { version = "0.3.1", features = ["toml"] }
mime = "0.3"
password-auth = "1"
serde_json = "1.0"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
    "time",
] }
tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = { workspace = true }
bytes = { workspace = true }
miniprobe-proto = { workspace = true, features = ["rand"] }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["local-offset", "formatting"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5.2", features = ["util"] }
